--- a/src/SkyScraper.TestWebsite/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/src/SkyScraper.TestWebsite/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -15,7 +15,7 @@ else
     <fieldset id="socialLoginList">
         <legend>Log in using another service</legend>
         <p>
-        @foreach (AuthenticationClientData p in Model)
+        @foreach (var p in Model)
         {
             <button type="submit" name="provider" value="@p.AuthenticationClient.ProviderName" title="Log in using your @p.DisplayName account">@p.DisplayName</button>
         }
