--- a/src/SkyScraper.TestWebsite/Views/Account/_RemoveExternalLoginsPartial.cshtml
+++ b/src/SkyScraper.TestWebsite/Views/Account/_RemoveExternalLoginsPartial.cshtml
@@ -5,7 +5,7 @@
     <h3>Registered external logins</h3>
     <table>
         <tbody>
-        @foreach (SkyScraper.TestWebsite.Models.ExternalLogin externalLogin in Model)
+        @foreach (var externalLogin in Model)
         {
             <tr>
                 <td>@externalLogin.ProviderDisplayName</td>
